--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,10 @@ https://huggingface.co/spacy/en_core_web_sm/resolve/main/en_core_web_sm-any-py3-
 nltk
 emot
 fuzzywuzzy
-streamlit==1.16.0
 streamlit-option-menu
 pandas
 torch
 transformers
 Pillow
 accelerate
+streamlit
